--- a/Homework2/ashih/index.html
+++ b/Homework2/ashih/index.html
@@ -9,14 +9,14 @@
 <body>
     <div class="container">
         <div class="map-container">
-            <svg id="#map-svg"></svg>
+            <svg id="map-svg"></svg>
         </div>
         <div class="details-container">
             <div class="histogram-container">
-                <svg id="#histogram-svg"></svg>
+                <svg id="histogram-svg"></svg>
             </div>
             <div class="parallel-container">
-                <svg id="#parallel-svg"></svg>
+                <svg id="parallel-svg"></svg>
             </div>
         </div>
     </div>
