--- a/Homework2/ashih/index.html
+++ b/Homework2/ashih/index.html
@@ -21,6 +21,8 @@
         </div>
     </div>
 	<script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://unpkg.com/d3-sankey@0"></script>
+    <script src="https://unpkg.com/topojson-client@3"></script>
 	<script src="main.js"></script>
 </body>
 </html>
